--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "core-js": "2",
         "custom-electron-titlebar": "^3.1.0",
         "devtron": "^1.4.0",
+        "digitalocean": "^1.2.0",
         "electron-debug": "^2.1.0",
         "electron-log": "^3.0.4",
         "electron-store": "^5.0.0",
