--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.8.1",
         "antd": "^3.20.5",
+        "axios": "^0.19.0",
         "connected-react-router": "^6.3.2",
         "core-js": "2",
         "custom-electron-titlebar": "^3.1.0",
