--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "electron-store": "^5.0.0",
         "electron-updater": "^4.0.6",
         "history": "^4.9.0",
+        "is-reachable": "^4.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-hot-loader": "^4.8.2",
